<resources>
    <string name="app_name">Calculadora</string>

    <string name="btn_clear">AC</string>

    <string name="symbol_plus">+</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_product">X</string>
    <string name="symbol_divison">÷</string>
    <string name="symbol_decimal_separator">,</string>
    <string name="symbol_plusMinus">+/-</string>
    <string name="symbol_percentage">%</string>
    <string name="symbol_equals">=</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
</resources>